# soumya-work-experience

./: README.md  example_6.duckdb  pyproject.toml
.github/workflows/: lint.yml  pytest.yml
data/: events_20250207_015906.jsonl  events_20250326_092819.jsonl  events_20250410_170322.jsonl  users_20250207_015906.jsonl  users_20250326_092819.jsonl  users_20250326_164736.jsonl  users_20250404_092317.jsonl  users_20250410_170322.jsonl
src/: example_6.duckdb  generate_data.py  pipeline.py
tests/: test_pipeline.py
